[tool.poetry]
name = "ytdl"
version = "0.1.0"
description = "Web based youtube-dl client"
authors = ["nazarii.oleksiuk@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
youtube-dl = "^2020.3.6"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
devtools = "^0.5.1"
isort = "^4.3.21"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
