[tool.pytest.ini_options]
norecursedirs = [
    ".venv",
    ".vscode",
    "__pycache__"
]
python_files = [
    "test_*.py"
]
python_functions = [
    "test_*"
]

[tool.coverage.run]
omit = [
    ".venv/*", 
    "tests/*"
]

[tool.mypy]
python_version = "3.8"
plugins = [
    "pydantic.mypy"
]
allow_untyped_globals = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = false

[tool.poetry]
name = "ytdl-api"
version = "0.1.0"
description = "API for web-based youtube-dl client"
authors = ["Nazar Oleksiuk <nazarii.oleksiuk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
youtube-dl = "*"
fastapi = "*"
uvicorn = "^0.11.3"
sse-starlette = "^0.6.1"
aiofiles = "^0.6.0"
deta = "^0.7"
pytube = "*"
ffmpeg-python = "^0.2.0"
confz = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
devtools = "^0.5.1"
isort = "^4.3.21"
pytest = "^5.3.5"
flake8 = "^3.7.9"
pdbpp = "^0.10.2"
requests = "^2.23.0"
pytest-pep8 = "^1.0.6"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
pre-commit = "^2.18.1"
mypy = "^0.961"
types-setuptools = "^62.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
