[tool.pytest.ini_options]
addopts = "--cov-report xml:cov.xml"
norecursedirs = [
    ".venv",
    ".vscode",
    "__pycache__"
]
python_files = [
    "test_*.py"
]
python_functions = [
    "test_*"
]

[tool.coverage.run]
omit = [
    ".venv/*",
    "tests/*"
]

[tool.mypy]
python_version = "3.10"
plugins = [
    "pydantic.mypy"
]
allow_untyped_globals = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = false

[tool.isort]
profile = "black"

[tool.poetry]
name = "ytdl-api"
version = "1.1.0"
description = "API for web-based youtube-dl client"
authors = ["Nazar Oleksiuk <nazarii.oleksiuk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
youtube-dl = "*"
fastapi = "*"
uvicorn = "^0.18.2"
sse-starlette = "^0.6.1"
aiofiles = "^0.6.0"
deta = "^1.1.0"
pytube = "*"
ffmpeg-python = "^0.2.0"
confz = "^1.6.1"
pyhumps = "^3.7.2"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "^5.10.1"
pytest = "*"
flake8 = "^3.7.9"
pdbpp = "^0.10.2"
requests = "^2.23.0"
pytest-pep8 = "^1.0.6"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
pre-commit = "^2.18.1"
mypy = "1.0.0"
types-setuptools = "^62.6.1"
pytest-mypy = "^0.9.1"
pyclean = "^2.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
